--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,14 @@
 			<version>1.4.7</version>
 		</dependency>
 
+		<!-- JUnit 4 -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+
     </dependencies>
 
 </project>
