--- a/pom.xml
+++ b/pom.xml
@@ -172,18 +172,16 @@
 
         <!-- JavaMail extension -->
     	<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.4.7</version>
-		</dependency>
+		<groupId>javax.mail</groupId>
+		<artifactId>mail</artifactId>
+		<version>1.4.7</version>
+	</dependency>
 
-		<!-- JUnit 4 -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
+	<dependency>
+    		<groupId>ro.pippo</groupId>
+		<artifactId>pippo-test</artifactId>
+	    	<version>${pippo.version}</version>
+    	</dependency>
 
     </dependencies>
 
