--- a/src/main/resources/conf/application.properties
+++ b/src/main/resources/conf/application.properties
@@ -6,7 +6,7 @@ application.languages = en
 # Neo4j credentials
 neo4j.host = http://localhost:7474
 neo4j.username = neo4j
-neo4j.password = 12345-call-help
+neo4j.password = neo4j
 
 # Development email settings
 mail.email = dev-email@gmail.com
