Rearrange doc folder layout and add testing

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,9 @@
 site_name: serp connect api
 pages:
     - Home: index.md
+    - 'User Guide':
+        - Development: 'user-guide/development.md'
+        - Contributing: 'user-guide/contributing.md'
+        - Testing: 'user-guide/testing.md'
     - API: api.md
-    - Dev: development.md
-    - Contriute: contributing.md
 theme: readthedocs
