--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,5 +5,8 @@ pages:
         - Development: 'user-guide/development.md'
         - Contributing: 'user-guide/contributing.md'
         - Testing: 'user-guide/testing.md'
+    - 'Internals':
+        - 'Trust Levels': 'internals/trust.md'
+        - 'Sessions': 'internals/sessions.md'
     - API: api.md
 theme: readthedocs
