Will now only send email in production mode

--- a/src/main/resources/conf/application.properties
+++ b/src/main/resources/conf/application.properties
@@ -6,7 +6,7 @@ application.languages = en
 # Neo4j credentials
 neo4j.host = http://localhost:7474
 neo4j.username = neo4j
-neo4j.password = neo4j
+neo4j.password = hej
 
 # Development email settings
 mail.email = dev-email@gmail.com
@@ -40,3 +40,7 @@ server.contextPath = /
 
 # Report Metrics via MBeans for VisualVM, JConsole, or JMX
 metrics.mbeans.enabled = true
+
+# Administrator email 
+administrator.email = ""
+%prod.administrator.email = "serpconnect@cs.lth.se"
